plugins {
    id 'org.jetbrains.intellij' version '1.17.3'
}

group 'pers.zlf'

targetCompatibility = 17

intellij {
    version = '2024.1'
    type = 'IU'
    plugins = ['java','DatabaseTools']
    updateSinceUntilBuild = false
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.freemarker:freemarker:2.3.23'
    implementation ('org.eclipse.jgit:org.eclipse.jgit:6.8.0.202311291450-r'){
        exclude group:"org.slf4j"
    }
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'

}
